[minor] Add support for mas-update pipeline

--- a/src/mas/devops/templates/pipelinerun-install.yml.j2
+++ b/src/mas/devops/templates/pipelinerun-install.yml.j2
@@ -11,7 +11,7 @@ spec:
 
   serviceAccountName: pipeline
   timeouts:
-    pipeline: "24h"
+    pipeline: "0"
 
   params:
     # IBM Entitlement Key
