--- a/src/mas/devops/templates/pipelinerun-upgrade.yml.j2
+++ b/src/mas/devops/templates/pipelinerun-upgrade.yml.j2
@@ -11,7 +11,7 @@ spec:
 
   serviceAccountName: pipeline
   timeouts:
-    pipeline: "10h"
+    pipeline: "0"
 
   params:
     - name: mas_instance_id
