--- a/src/mas/devops/templates/pipelinerun-install.yml.j2
+++ b/src/mas/devops/templates/pipelinerun-install.yml.j2
@@ -426,6 +426,10 @@ spec:
     - name: mas_domain
       value: "{{ mas_domain }}"
 {%- endif %}
+{%- if special_characters is defined and special_characters != "" %}
+    - name: special_characters
+      value: "{{ special_characters }}"
+{%- endif %}
 {%- if mas_cluster_issuer is defined and mas_cluster_issuer != "" %}
     - name: mas_cluster_issuer
       value: "{{ mas_cluster_issuer }}"
