--- a/src/mas/devops/templates/pipelinerun-install.yml.j2
+++ b/src/mas/devops/templates/pipelinerun-install.yml.j2
@@ -690,10 +690,8 @@ spec:
 
     # AI Broker
     # -------------------------------------------------------------------------
-    - name: install_aibroker
-      value: "{{ install_aibroker }}"
-    - name: mas_aibroker_channel
-      value: "{{ mas_aibroker_channel }}"
+    - name: mas_app_channel_aibroker
+      value: "{{ mas_app_channel_aibroker }}"
 {%- endif %}
 {%- if mas_aibroker_storage_provider is defined and mas_aibroker_storage_provider != "" %}
     
