[patch] add dro_namespace to uninstall pipeline
https://jsw.ibm.com/browse/MASCORE-4072

--- a/src/mas/devops/templates/pipelinerun-uninstall.yml.j2
+++ b/src/mas/devops/templates/pipelinerun-uninstall.yml.j2
@@ -32,3 +32,6 @@ spec:
       value: {{ sls_action }}
     - name: uds_action
       value: {{ uds_action }}
+    - name: dro_namespace
+      value: {{ dro_namespace }}
+    
