[PATCH] add cpd_install_all

--- a/src/mas/devops/templates/pipelinerun-install.yml.j2
+++ b/src/mas/devops/templates/pipelinerun-install.yml.j2
@@ -278,6 +278,8 @@ spec:
       value: "{{ cpd_install_openscale }}"
     - name: cpd_install_cognos
       value: "{{ cpd_install_cognos }}"
+    - name: cpd_install_all
+      value: "{{ cpd_install_all }}"
 {%- endif %}
 
     # Dependencies - SLS
