--- a/src/mas/devops/templates/pipelinerun-install.yml.j2
+++ b/src/mas/devops/templates/pipelinerun-install.yml.j2
@@ -686,14 +686,12 @@ spec:
     - name: grafana_instance_storage_size
       value: "{{ grafana_instance_storage_size }}"
 {%- endif %}
-{%- if install_aibroker is defined and install_aibroker != "" %}
+{%- if mas_app_channel_aibroker is defined and mas_app_channel_aibroker != "" %}
 
     # AI Broker
     # -------------------------------------------------------------------------
-    - name: install_aibroker
-      value: "{{ install_aibroker }}"
-    - name: mas_aibroker_channel
-      value: "{{ mas_aibroker_channel }}"
+    - name: mas_app_channel_aibroker
+      value: "{{ mas_app_channel_aibroker }}"
 {%- endif %}
 {%- if mas_aibroker_storage_provider is defined and mas_aibroker_storage_provider != "" %}
     
